# pos-system

./: .gitignore  README.md  plan.txt
app/: main.py
app/api/v1/routes/: branch.py
app/core/: config.py
app/db/: database.py
app/models/: branch.py
app/templates/: branches_list.html
data/: products.json  users.json
pos-system/: CMakeLists.txt  README.md
pos-system/include/: config.hpp  http_server.hpp  sha256.hpp
pos-system/src/: config.cpp  main.cpp
pos-system/tests/: test.cpp
src/: http_server.cpp  sha256.cpp
